# Units

./: .gitignore  CMakeLists.txt  build_and_test.sh
source/: CMakeLists.txt
source/core/: CMakeLists.txt
source/core/ams/: formations.hpp  math.hpp  unit.hpp  unit_container.hpp
source/core/units/: formations.hpp  math.hpp  unit.hpp  unit_container.hpp
source/gui/: CMakeLists.txt
source/gui/ams/gui/: window.cpp  window.hpp
source/gui/units/gui/: window.cpp  window.hpp
source/sim/: CMakeLists.txt  box.cpp  main.cpp  walking.cpp  walking_unit.hpp
source/test/: CMakeLists.txt  ams_test_listener.hpp  main.cpp
source/test/ams/: unit_container_test.cpp  walking_test.cpp
source/test/units/: dummy_test.cpp  unit_container_test.cpp
